<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/cart_background"
    android:elevation="3dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Recyclers"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/picCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/pop_1" />

    <TextView
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cantidad_populares"
        android:textColor="#D22B2B2E"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="@+id/pic"
        app:layout_constraintStart_toStartOf="@+id/pic"
        app:layout_constraintTop_toBottomOf="@+id/pic" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/Signo_viewholder"
        android:textColor="#FF5722"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/fee"
        app:layout_constraintEnd_toStartOf="@+id/fee"
        app:layout_constraintTop_toBottomOf="@+id/pic" />

    <TextView
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/orange_boton"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="3dp"
        android:text="@string/agregar"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fee" />
</androidx.constraintlayout.widget.ConstraintLayout>