<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/cart_background"
    android:elevation="3dp">

    <ImageView
        android:id="@+id/picCart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/picCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Title_viewholder"
        android:textColor="#B9000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picCart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <ImageView
        android:id="@+id/menosCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/picCart"
        app:layout_constraintBottom_toBottomOf="@+id/picCart"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt"
        app:srcCompat="@drawable/minus" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cantidad_viewholder"
        android:textColor="#B9000000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menosCart"
        app:layout_constraintEnd_toStartOf="@+id/masCartBtn"
        app:layout_constraintStart_toEndOf="@+id/menosCart"
        app:layout_constraintTop_toTopOf="@+id/menosCart" />

    <ImageView
        android:id="@+id/masCartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="51dp"
        android:contentDescription="@string/picCart"
        app:layout_constraintStart_toEndOf="@+id/menosCart"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus" />

    <TextView
        android:id="@+id/feeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Feeld_viewholder"
        android:textColor="#373b54"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/titleTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/Signo_viewholder"
        android:textColor="#ff3d00"
        app:layout_constraintBottom_toBottomOf="@+id/feeId"
        app:layout_constraintEnd_toStartOf="@+id/feeId"
        app:layout_constraintTop_toTopOf="@+id/feeId" />

    <TextView
        android:id="@+id/totalEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/TotalEachItem"
        android:textColor="#B9000000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/masCartBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/masCartBtn"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/Signo_viewholder"
        android:textColor="#ff3d00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalEachItem"
        app:layout_constraintEnd_toStartOf="@+id/totalEachItem"
        app:layout_constraintTop_toTopOf="@+id/totalEachItem" />
</androidx.constraintlayout.widget.ConstraintLayout>